# dash

./: .gitignore  .openhands_instructions  CLAUDE.md  Dockerfile  Dockerfile.sandbox  README.md  compose.platform.yaml  compose.yaml  example.env  implementation.md  pyproject.toml  requirements.txt
agents/: knowledge_agent.py  mcp_agent.py  pal.py
app/: __init__.py  config.yaml  main.py
app/static/: index.html
da/: __init__.py  __main__.py  agent.py  paths.py
da/scripts/: __init__.py
da/tools/: __init__.py  analyze.py  learnings.py  save_query.py
dash/: __init__.py  __main__.py  agent.py  agents.py  mcp_config.example.json  paths.py  platform.py
dash/context/: business_rules.py  learnings.py  query_patterns.py  semantic_model.py
dash/evals/: run_evals.py
dash/prompts/: security_policy.j2  security_risk_assessment.j2  system_prompt.j2  system_prompt_platform.j2
dash/scripts/: check_schema.py  load_data.py  load_knowledge.py
dash/tools/: __init__.py  introspect.py  save_learning.py  save_query.py  sql.py
data_agent/: README.md  __init__.py  __main__.py  agent.py  semantic_model.py
data_agent/evals/: __init__.py  run_evals.py  test_cases.py
data_agent/scripts/: load_data.py  load_knowledge.py
data_agent/tools/: __init__.py  analyze.py  (+2 more)
db/: __init__.py  session.py
docs/: enterprise.md  evals.md  knowledge.md  platform-mode.md  sdk-mode.md
scripts/: build_image.sh  cloud_api_demo.py  entrypoint.sh  format.sh  generate_requirements.sh  railway_up.sh  validate.sh  venv_setup.sh
skills/: dash-agent.md  dash-schema.md  dash-sql-patterns.md
(+6 files in other folders)
