[project]
name = "dash"
version = "1.0.0"
description = "A self-learning data agent that provides insights, not just query results"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]

dependencies = [
  "openhands-sdk",
  "openhands-tools",
  "fastapi[standard]",
  "httpx",
  "openai",
  "pandas",
  "psycopg[binary]",
  "sqlalchemy",
  "rich",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dash*", "db*", "app*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["setuptools.*", "pandas.*", "httpx.*", "openhands.*"]
ignore_missing_imports = true
